--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   get: ^4.6.6
   get_storage:
-  cupertino_icons: ^1.0.2
+  pull_to_refresh: ^2.0.0
   equatable: ^2.0.0
   dotted_border:
   flutter_easyloading:
@@ -62,6 +62,9 @@ dev_dependencies:
   firebase_auth: ^4.0.0
   firebase_database: ^10.1.0
   sqflite: ^2.3.3
+  pull_to_refresh_flutter3: ^2.0.2
+  fl_chart: ^0.40.0
+
   ##cloud_firestore:
 #  cloud_firestore: ^4.4.5
 # For information on the generic Dart part of this file, see the
