--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ dev_dependencies:
   sqflite: ^2.3.3
   pull_to_refresh_flutter3: ^2.0.2
   fl_chart: ^0.40.0
-
+  charts_flutter: ^0.11.0
   ##cloud_firestore:
 #  cloud_firestore: ^4.4.5
 # For information on the generic Dart part of this file, see the
