--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ dev_dependencies:
   pull_to_refresh_flutter3: ^2.0.2
   fl_chart: ^0.40.0
   charts_flutter: ^0.11.0
+  firebase_storage: ^11.7.6
+  # image_picker: 
+  gallery_picker: 
   ##cloud_firestore:
 #  cloud_firestore: ^4.4.5
 # For information on the generic Dart part of this file, see the
