--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ dev_dependencies:
   charts_flutter: ^0.11.0
   firebase_storage: ^11.7.6
   # image_picker: 
-  gallery_picker: 
+  # gallery_picker: 
   ##cloud_firestore:
 #  cloud_firestore: ^4.4.5
 # For information on the generic Dart part of this file, see the
