--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dev_dependencies:
   fl_chart: ^0.40.0
   charts_flutter: ^0.11.0
   firebase_storage: ^11.7.6
+  animated_size_and_fade: ^4.0.0
   # image_picker: 
   # gallery_picker: 
   ##cloud_firestore:
