--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dev_dependencies:
   charts_flutter: ^0.11.0
   firebase_storage: ^11.7.6
   animated_size_and_fade: ^4.0.0
+  web_socket_channel: ^2.1.0
+  
   # image_picker: 
   # gallery_picker: 
   ##cloud_firestore:
